--- a/templates/login.html
+++ b/templates/login.html
@@ -17,10 +17,10 @@
                 <div class="form-actions btn-group">
                     <button type="submit" class="btn btn-success debounce">Log in</button>
                 </div>
-                <div class="form-actions btn-group">
-                    <a class="btn btn-primary" href="{{ url_for('forgot_password') }}">Forgot password</a>
+                <!--<div class="form-actions btn-group">-->
+                    <!--<a class="btn btn-primary" href="{{ url_for('forgot_password') }}">Forgot password</a>-->
                     <a class="btn btn-primary" href="{{ url_for('signup', next=form.next.data) }}">Sign up</a>
-                </div>
+                <!--</div>-->
             </form>
         </div>
 
