Extract out the table view to a view helper, and show the user their favourite events (ie. their talk schedule) on their home page.

--- a/templates/events.html
+++ b/templates/events.html
@@ -1,3 +1,4 @@
+{% from "_eventtable.html" import event_table %}
 <!DOCTYPE html>
 <html lang="en">
 {% include 'head.html' %}
@@ -5,66 +6,11 @@
     {% include 'navigation.html' %}
 
     <div class="container">
-        {% for day_of_festival in [29, 30, 31, 0] %}
-            <h3>
-                {% if (day_of_festival == 0) %}
-                    All Days or not yet scheduled
-                {% endif %}
-                {% if (day_of_festival == 29) %}
-                    Friday
-                {% endif %}
-                {% if (day_of_festival == 30) %}
-                    Saturday
-                {% endif %}
-                {% if (day_of_festival == 31) %}
-                    Sunday
-                {% endif %}
-            </h3>
-            <table class="table table-stdiped">
-                <tr>
-                    {% if current_user.is_authenticated() %}
-                      <th>&nbsp;</th>
-                    {% endif %}
-                    {% if (day_of_festival != 0) %}
-                        <th>Start</th>
-                        <th>End</th>
-                    {% endif %}
-                    <th>Speaker(s)</th>
-                    <th>Title</th>
-                    <th>Type</th>
-                    <th>Location</th>
-                </tr>
-                {% for event in events %}
-                    {% if (event.matches_day(day_of_festival)) %}
-                        <tr>
-                          {% if current_user.is_authenticated() %}
-                            <td>
-                            {% if event in current_user.events %}
-                              <form action="/events/{{event.id}}/unfavourite" method="POST">
-                                {{ form.hidden_tag() }}
-                                <input type="image" src="/static/star_full.png" class="star" alt="Remove from favourites" />
-                              </form>
-                            {% else %}
-                              <form action="/events/{{event.id}}/favourite" method="POST">
-                                {{ form.hidden_tag() }}
-                                <input type="image" src="/static/star_empty.png" class="star" alt="Add to favourites" />
-                              </form>
-                            {% endif %}
-                            </td>
-                          {% endif %}
-                            {% if (day_of_festival != 0) %}
-                                <td>{{event.start_time.strftime('%H:%M')}}</td>
-                                <td>{{event.end_time.strftime('%H:%M')}}</td>
-                            {% endif %}
-                            <td>{{event.speaker_names}}</td>
-                            <td>{{event.title}}</td>
-                            <td>{{event.type_id}}</td>
-                            <td>{{event.location_name}}</td>
-                        </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
-        {% endfor %}
+      {% if current_user.is_authenticated() %}
+          {{ event_table(event_data, current_user.events, form) }}
+      {% else %}
+          {{ event_table(event_data) }}
+      {% endif %}
     </div>
 
     {% include 'footer.html' %}
