--- a/templates/home.html
+++ b/templates/home.html
@@ -7,21 +7,24 @@
     {% include 'navigation.html' %}
     <div class="container">
         <h3>Home</h3>
-
-        <p>
-            We'll use these fields to inform you of upcoming talks you're interested in (</a href="/events">you can mark them here</a>), either via SMS or a notification to the badge. If you don't fancy using one of those channels, just leave the field blank.
-        </p>
-
-        <p>
-            We promise to leave you alone after the event!
-        </p>
-
         <form method="post" role="form" class="form-horizontal">
             <fieldset>
+                <p>This is the name that will be shown on your badge.</p>
                 {{ form.hidden_tag() }}
                 {{ render_field(form.nickname, True) }}
-                {{ render_field(form.badgeid, True) }}
-                {{ render_field(form.phone, True) }}
+            </fieldset>
+
+            <fieldset>
+                <p>
+                    We'll use this information to inform you of upcoming talks you're interested in (</a href="/events">you can mark them here</a>), either via SMS or a notification to the badge. If you don't fancy using one of those channels, just leave the field blank.
+                </p>
+
+                <p>
+                    We promise to leave you alone after the event!
+                </p>
+
+                {{ render_field(form.badgeid, True, placeholder="EMF1234") }}
+                {{ render_field(form.phone, True, placeholder="+44777 777 7777") }}
                 <div class="form-actions col-sm-offset-3 col-sm-9">
                     <button type="submit" name="Create" class="btn btn-primary debounce">Save</button>
                 </div>
