Made favouriting fallback cleanly if you're mad and have javascript turned off

--- a/templates/events.html
+++ b/templates/events.html
@@ -75,7 +75,7 @@
                 $.ajax({
                     type: "POST",
                     url: event_handle.target.action,
-                    data: $(event_handle.target).serialize(),
+                    data: $(event_handle.target).serialize()+'&json=true',
                     success: function(data)
                     {
                         if (data.favourite)
