Moved favouriting javascript into a js file.

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,31 +44,7 @@
     </div>
 
     {% include 'footer.html' %}
-
-    <script>
-        $(document).ready(function() {
-            $(".fave").submit(function(event_handle){
-                $.ajax({
-                    type: "POST",
-                    url: event_handle.target.action,
-                    data: $(event_handle.target).serialize()+'&json=true',
-                    success: function(data)
-                    {
-                        if (data.favourite)
-                        {
-                            $('#fave'+data.event_id)[0].action = '/events/'+data.event_id+'/unfavourite';
-                            $('#fave'+data.event_id).find('input[type=image]')[0].src = '/static/star_full.png';
-                        }
-                        else
-                        {
-                            $('#fave'+data.event_id)[0].action = '/events/'+data.event_id+'/favourite';
-                            $('#fave'+data.event_id).find('input[type=image]')[0].src = '/static/star_empty.png';
-                        }
-                    }
-                });
-                return false;
-            });
-        });
-    </script>
+    <!-- AJAXY favouriting script -->
+    <script src="static/fave.js"></script>
 </body>
 </html>
