--- a/static/main.css
+++ b/static/main.css
@@ -7,5 +7,13 @@ input.star {
   max-height: 24px;
 }
 
+tr.event.past {
+  color: #bbb;
+}
+
+tr.event.now {
+  background-color: #ffc;
+}
+
 .navbar {
 }
